// Vitest Snapshot v1

exports[`User Component tests > Account Page 1`] = `
<div>
  <h2>
    Unhandled Thrown Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    No account service available
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    Error: No account service available
    at withAccountService (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:397:9)
    at Module.canUpdateEmail (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:258:10)
    at User (/Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.tsx:220:52)
    at renderWithHooks (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:14985:18)
    at mountIndeterminateComponent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:17811:13)
    at beginWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:19049:16)
    at HTMLUnknownElement.callCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3945:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventListener.js:26:30)
    at innerInvokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:340:25)
    at invokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:276:3)
    at HTMLUnknownElementImpl._dispatch (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:223:9)
    at HTMLUnknownElementImpl.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:94:17)
    at HTMLUnknownElement.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventTarget.js:241:34)
    at Object.invokeGuardedCallbackDev (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3994:16)
    at invokeGuardedCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:4056:31)
    at beginWork$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:23964:7)
    at performUnitOfWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22779:12)
    at workLoopSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22707:5)
    at renderRootSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22670:7)
    at performSyncWorkOnRoot (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22293:18)
    at scheduleUpdateOnFiber (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:21881:7)
    at updateContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:25482:3)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26021:7
    at unbatchedUpdates (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22431:12)
    at legacyRenderSubtreeIntoContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26020:5)
    at Object.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26103:10)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:101:25
    at batchedUpdates$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22380:12)
    at act (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1042:14)
    at Proxy.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:97:26)
    at Module.customRender (/Users/darko.atanasovski/projects/ott-web-app/test/testUtils.tsx:75:61)
    at /Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.test.tsx:71:31
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2266:13
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2141:26
    at runTest (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:540:42)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runFiles (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:767:5)
    at async startTestsNode (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:785:3)
    at async /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:83:9
    at async Module.withEnv (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:293:5)
    at async run (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:76:5)
    at async file:///Users/darko.atanasovski/projects/ott-web-app/node_modules/tinypool/dist/esm/worker.js:109:20
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     props on 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      &lt;Route&gt;
    </code>
  </p>
</div>
`;

exports[`User Component tests > Favorites Page 1`] = `
<div>
  <h2>
    Unhandled Thrown Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    Cannot destructure property 'cleeng' of 'config.integrations' as it is undefined.
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    TypeError: Cannot destructure property 'cleeng' of 'config.integrations' as it is undefined.
    at withAccountService (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:391:11)
    at Module.canUpdateEmail (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:258:10)
    at User (/Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.tsx:220:52)
    at renderWithHooks (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:14985:18)
    at mountIndeterminateComponent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:17811:13)
    at beginWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:19049:16)
    at HTMLUnknownElement.callCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3945:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventListener.js:26:30)
    at innerInvokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:340:25)
    at invokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:276:3)
    at HTMLUnknownElementImpl._dispatch (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:223:9)
    at HTMLUnknownElementImpl.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:94:17)
    at HTMLUnknownElement.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventTarget.js:241:34)
    at Object.invokeGuardedCallbackDev (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3994:16)
    at invokeGuardedCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:4056:31)
    at beginWork$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:23964:7)
    at performUnitOfWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22779:12)
    at workLoopSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22707:5)
    at renderRootSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22670:7)
    at performSyncWorkOnRoot (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22293:18)
    at scheduleUpdateOnFiber (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:21881:7)
    at updateContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:25482:3)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26021:7
    at unbatchedUpdates (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22431:12)
    at legacyRenderSubtreeIntoContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26020:5)
    at Object.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26103:10)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:101:25
    at batchedUpdates$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22380:12)
    at act (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1042:14)
    at Proxy.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:97:26)
    at Module.customRender (/Users/darko.atanasovski/projects/ott-web-app/test/testUtils.tsx:75:61)
    at /Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.test.tsx:128:31
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2266:13
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2141:26
    at runTest (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:540:42)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runFiles (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:767:5)
    at async startTestsNode (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:785:3)
    at async /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:83:9
    at async Module.withEnv (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:293:5)
    at async run (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:76:5)
    at async file:///Users/darko.atanasovski/projects/ott-web-app/node_modules/tinypool/dist/esm/worker.js:109:20
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     props on 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      &lt;Route&gt;
    </code>
  </p>
</div>
`;

exports[`User Component tests > Payments Page 1`] = `
<div>
  <h2>
    Unhandled Thrown Error!
  </h2>
  <h3
    style="font-style: italic;"
  >
    No account service available
  </h3>
  <pre
    style="padding: 0.5rem; background-color: rgba(200, 200, 200, 0.5);"
  >
    Error: No account service available
    at withAccountService (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:397:9)
    at Module.canUpdateEmail (/Users/darko.atanasovski/projects/ott-web-app/src/stores/AccountController.ts:258:10)
    at User (/Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.tsx:220:52)
    at renderWithHooks (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:14985:18)
    at mountIndeterminateComponent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:17811:13)
    at beginWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:19049:16)
    at HTMLUnknownElement.callCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3945:14)
    at HTMLUnknownElement.callTheUserObjectsOperation (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventListener.js:26:30)
    at innerInvokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:340:25)
    at invokeEventListeners (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:276:3)
    at HTMLUnknownElementImpl._dispatch (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:223:9)
    at HTMLUnknownElementImpl.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/events/EventTarget-impl.js:94:17)
    at HTMLUnknownElement.dispatchEvent (/Users/darko.atanasovski/projects/ott-web-app/node_modules/jsdom/lib/jsdom/living/generated/EventTarget.js:241:34)
    at Object.invokeGuardedCallbackDev (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:3994:16)
    at invokeGuardedCallback (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:4056:31)
    at beginWork$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:23964:7)
    at performUnitOfWork (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22779:12)
    at workLoopSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22707:5)
    at renderRootSync (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22670:7)
    at performSyncWorkOnRoot (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22293:18)
    at scheduleUpdateOnFiber (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:21881:7)
    at updateContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:25482:3)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26021:7
    at unbatchedUpdates (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22431:12)
    at legacyRenderSubtreeIntoContainer (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26020:5)
    at Object.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:26103:10)
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:101:25
    at batchedUpdates$1 (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom.development.js:22380:12)
    at act (/Users/darko.atanasovski/projects/ott-web-app/node_modules/react-dom/cjs/react-dom-test-utils.development.js:1042:14)
    at Proxy.render (/Users/darko.atanasovski/projects/ott-web-app/node_modules/@testing-library/react/dist/pure.js:97:26)
    at Module.customRender (/Users/darko.atanasovski/projects/ott-web-app/test/testUtils.tsx:75:61)
    at /Users/darko.atanasovski/projects/ott-web-app/src/pages/User/User.test.tsx:83:31
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2266:13
    at /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-chain.0ab05798.mjs:2141:26
    at runTest (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:540:42)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runSuite (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:635:15)
    at async runFiles (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:767:5)
    at async startTestsNode (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:785:3)
    at async /Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:83:9
    at async Module.withEnv (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/chunk-runtime-error.f5506f40.mjs:293:5)
    at async run (/Users/darko.atanasovski/projects/ott-web-app/node_modules/vitest/dist/entry.mjs:76:5)
    at async file:///Users/darko.atanasovski/projects/ott-web-app/node_modules/tinypool/dist/esm/worker.js:109:20
  </pre>
  <p>
    💿 Hey developer 👋
  </p>
  <p>
    You can provide a way better UX than this when your app throws errors by providing your own 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      errorElement
    </code>
     props on 
    <code
      style="padding: 2px 4px; background-color: rgba(200, 200, 200, 0.5);"
    >
      &lt;Route&gt;
    </code>
  </p>
</div>
`;
